# control-uwv_dynamic_model

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  manifest.xml
cmake/: CommonSetup.cmake
configuration/: uwv_dynamic_model.pc.in
src/: CMakeLists.txt  DataTypes.hpp  DynamicKinematicSimulator.cpp  DynamicKinematicSimulator.hpp  DynamicModel.cpp  DynamicModel.hpp  DynamicSimulator.cpp  DynamicSimulator.hpp  KinematicModel.cpp  KinematicModel.hpp  ModelSimulation.cpp  ModelSimulation.hpp  RK4Integrator.cpp  RK4Integrator.hpp  UwvDynamicModel.cpp  UwvDynamicModel.hpp  UwvKinematicModel.cpp  UwvKinematicModel.hpp  UwvModelSimulation.cpp  UwvModelSimulation.hpp  edited stuff  uwv_dataTypes.h  uwv_dataTypes.hpp  uwv_dynamic_model.cpp  uwv_dynamic_model.h  uwv_dynamic_model.hpp  uwv_kinematic_model.cpp  uwv_kinematic_model.hpp  uwv_kinematic_model.hpp~  uwv_model_simulation.cpp  uwv_model_simulation.hpp
test/: CMakeLists.txt  test.cpp  test_calc.cpp
